--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-simple-typewriter": "^5.0.1",
     "sanity": "^3.91.0",
     "styled-components": "^6.1.18",
     "tailwind-merge": "^3.3.0"
